--- a/web/public/stylesheets/style.css
+++ b/web/public/stylesheets/style.css
@@ -1,72 +1,91 @@
 /* Estilos generales */
 body {
-    background: #A1FFCE;  /* Fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FAFFD1, #A1FFCE);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FAFFD1, #A1FFCE); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
-  
-  .container {
-    margin-top: 50px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .form-control {
-    margin-bottom: 10px;
-  }
-  
-  .btn-primary {
-    margin-top: 10px;
-  }
-  
-  .card {
-    margin-bottom: 20px;
-  }
+  background: #A1FFCE;
+  background: -webkit-linear-gradient(to right, #FAFFD1, #A1FFCE);
+  background: linear-gradient(to right, #FAFFD1, #A1FFCE);
+}
 
-  .card-img-top {
-    height: 300px;
-    width: 600px;
-    object-fit: contain;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  
-  .card-title {
-    font-size: 20px;
-    font-weight: bold;
-  }
-  
-  .card-text {
-    margin-bottom: 15px;
-  }
-  
-  .btn-danger {
-    margin-left: 5px;
-  }
-  
-  /* Estilos específicos para agregarproductos.ejs */
-  form {
-    max-width: 500px;
-    margin: 0 auto;
-  }
-  
-  /* Estilos específicos para editarproductos.ejs */
-  /* Aquí puedes agregar estilos adicionales si lo deseas */
-  
-  /* Estilos específicos para productos.ejs */
-  .row {
-    margin-top: 20px;
-  }
-  
-  .col-sm-6 {
-    margin-bottom: 20px;
-  }
-  
-  .btn-primary {
-    margin-top: 10px;
-  }
-  
+.container {
+  margin-top: 50px;
+}
+
+h1 {
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 1.5rem;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-primary {
+  margin-top: 10px;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+.card-img-top {
+  height: 300px;
+  width: 100%;
+  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-title {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.card-text {
+  margin-bottom: 15px;
+}
+
+.btn-danger {
+  margin-left: 5px;
+}
+
+/* Estilos específicos para agregarproductos.ejs */
+.modern-form {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+/* Estilos específicos para editarproductos.ejs */
+/* Aquí puedes agregar estilos adicionales si lo deseas */
+
+/* Estilos específicos para productos.ejs */
+.row {
+  margin-top: 20px;
+}
+
+.col-sm-6 {
+  margin-bottom: 20px;
+}
+
+.btn-primary {
+  margin-top: 10px;
+}
